fix modal x on iphone

--- a/src/style.css
+++ b/src/style.css
@@ -338,7 +338,7 @@ p:has(.form-error) {
     position: absolute;
     right: var(--base-spacing);
     z-index: 100;
-    transition: all 0.4s ease;
+    transition: all 0.3s ease;
     box-shadow: 0 0 1rem rgba(var(--black), 0.1);
 
     .tab-control {
